# Bible_chatbot

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  ROADMAP.md  TERMS.md  main.py  play.py  pyproject.toml  requirements.txt  struct.text  tiktokf0OZJhUyfDcLQ3MfLlzzN5z88ayNHyhz.txt  tiktokxhRoabdyMyWLRXdXVa7fNjF7Jd9OvnK9.txt
.github/workflows/: cron.yml  lint.yml
src/: bibleAI.py  chat-api.py  chat-bot.py  chat-bot.test.py  chatapp.py  chatbot.py  newai.py  ratelimit.py  run.py  utills.py  versegen.py
src/bot/: testx.py  twitterbot.py
website/: TERMS.md  index.html  privacy.md
website/js/: main.js
website/styles/: main.css
